k8s/overlays/production/headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ingress
  namespace: kube-system
  labels:
    app.kubernetes.io/name: todo-app
    app.kubernetes.io/component: headlamp
    app.kubernetes.io/part-of: todo-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - headlamp.dangdoan.com
      secretName: headlamp-tls
  rules:
    - host: headlamp.dangdoan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-headlamp
                port:
                  number: 80
